cmake_minimum_required(VERSION 3.0)
project(socket LANGUAGES CXX)
set(CMAKE_INCLUDE_CURRENT_DIR on)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_BUILD_TYPE Debug)
# set(CMAKE_LIBRARY_OUTPUT_DIRECTORY lib)
# set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY lib)
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
include_directories(inc)
link_directories(lib)
add_executable(server src/server.cc)
add_executable(client src/client.cc)
